# abp-interactive-learning

./: .env.example  .gitignore  AGENT_BUILD_INSTRUCTIONS.md  AI_PATH_ADVISOR_FEATURES.md  AI_PATH_ADVISOR_VERIFICATION.txt  DEPLOYMENT-MAX.md  DEPLOYMENT_STATUS.md  Dockerfile  EUREKA_OPTIONS.md  GITHUB-UPLOAD-INSTRUCTIONS.md  HOW_TO_USE_AGENT_INSTRUCTIONS.md  LANDING_PAGE_BUILD_INSTRUCTIONS.md  Makefile  PREP_COURSES_REVIEW.md  README.md  REPOSITORY_CONTENTS.md  academic-api-client.js  academic-profile-sync.js  academic-setup.html  ai-generator.html  ai-path-advisor-improved.html  ai-path-advisor.html  certifications-backup.html  certifications.html  complete-career-paths-expansion.js  copy-landing-page.sh  corporate.html  course-platform.html  course-syllabus-system.js  create-ai-path-advisor-kit.py  create-ai-path-advisor-pro.py  create-enhanced-advisor.py  dark-demo.html  dashboard.css  dashboard.html  dashboard.js  deploy-to-github.sh  diagnostic.html  docker-compose.yml  expanded-course-catalogs-2.js  (+60 more)
ai-path-advisor-pro/: COURSE_FEATURES.md  HOW_TO_RUN.md  README.md  run_backend.sh  run_frontend.sh  start.sh  test_backend.py  test_courses.sh
ai-path-advisor-starter/: README.md
backend/: .env.example  Dockerfile  README.md  README_MAX.md  docker-compose.max.yml  main.py  main_dr_sarah.py  main_max.py  requirements.txt  run_max.sh  (+1 more)
emma/: .env.example  README.md  create_emma_improved.py  create_real_emma.py  enhance_emma_full_stack.py  pyproject.toml
emma/apps/api/: main.py  orchestrator.py  orchestrator_enhanced.py
emma/apps/web/: package.json
emma/apps/web/app/: page.tsx
emma/infra/compose/: docker-compose.dev.yml
emma/infra/db/: init.sql
emma/infra/docker/: Dockerfile.api  Dockerfile.web
emma/scripts/: dev_bootstrap.sh
emma/services/sandbox/: main.py
(+241 files in other folders)
