[project]
name = "emma"
version = "1.0.0"
description = "Expert Multimodal & Math Assistant - Production-grade AI system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "dramatiq[redis,watch]>=1.15.0",
    "redis>=5.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.2.0",
    "neo4j>=5.14.0",
    "minio>=7.2.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "langfuse>=2.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "sympy>=1.12",
    "matplotlib>=3.8.0",
    "jax[cpu]>=0.4.20",
    "pint>=0.22",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=3.17.0",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "docker>=7.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"